fixed the header line break on iphone5 device https://github.com/sayidly/idoogu/issues/1

--- a/_sass/custom/_main.scss
+++ b/_sass/custom/_main.scss
@@ -20,7 +20,7 @@ h6 {
 
 h1 {
   @include breakpoint(mobile) {
-    @include font-size($headline-1*.8);
+    @include font-size($headline-1*.7);
   }
 }
 
